# AdvRendering-GitWiki

./: README.md
Codebase/RawEngine_v1/: CMakeLists.txt  main.cpp
Codebase/RawEngine_v1/core/: ComputeParticleManager.cpp  ComputeParticleManager.h  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  ParticleQuad.cpp  ParticleQuad.h  Shader.cpp  Shader.h
Codebase/RawEngine_v1/shaders/: compute.comp  fragment.frag  fragment.fs  particleFragment.frag  particleVertex.vert  vertex.vert  vertex.vs
Raw results/: CPU_400_2026-04-28_22.42.28.csv  CPU_500_2026-04-28_15.45.41.csv  CPU_600_2026-04-28_22.43.05.csv  CPU_700_2026-04-28_22.44.06.csv  CPU_900_2026-04-28_22.47.11.csv  GPU_2000_2026-05-02_19.58.09.csv  GPU_200_2026-05-02_19.55.03.csv  GPU_3000_2026-05-02_19.58.44.csv  GPU_4000_2026-04-28_16.24.02.csv  GPU_500_2026-04-28_16.23.04.csv  GPU_6000_2026-04-28_16.25.01.csv  GPU_9000_2026-05-02_20.00.51.csv  GPU_9000_2026-05-03_01.46.07.csv  GPU_900_2026-05-02_19.57.40.csv
Raw results/CPU/: CPU_1000_2026-04-28_15.46.33.csv  CPU_100_2026-04-28_15.45.15.csv  CPU_200_2026-04-28_22.41.46.csv  CPU_300_2026-04-28_15.44.00.csv  CPU_800_2026-04-28_22.45.33.csv
Raw results/GPU/: GPU_10000_2026-04-28_16.27.16.csv  GPU_1000_2026-04-28_16.23.22.csv  GPU_100_2026-04-28_16.22.11.csv  GPU_2000_2026-04-28_16.23.41.csv  GPU_300_2026-04-28_16.22.44.csv  GPU_400_2026-05-02_19.56.07.csv  GPU_5000_2026-05-02_19.59.13.csv  GPU_600_2026-05-02_19.56.26.csv  GPU_7000_2026-05-02_19.59.58.csv  GPU_700_2026-05-02_19.56.40.csv  GPU_8000_2026-04-28_16.26.02.csv  GPU_800_2026-05-02_19.57.16.csv
Raw results/SmoothingRadiusTests/: GPU_0.100000_2026-05-04_15.42.16.csv  GPU_0.200000_2026-05-04_15.43.15.csv  GPU_0.300000_2026-05-04_15.43.56.csv  GPU_0.400000_2026-05-04_15.44.37.csv  GPU_0.500000_2026-05-04_15.45.14.csv  GPU_0.600000_2026-05-04_15.46.12.csv  GPU_0.700000_2026-05-04_15.46.55.csv  GPU_0.800000_2026-05-04_15.47.35.csv  GPU_0.900000_2026-05-04_15.48.13.csv  GPU_1.000000_2026-05-04_15.49.10.csv
Raw results/Testing/: deltaTime_2026-04-28_13-24-30.csv  deltaTime_2026-04-28_13.24.53.csv  deltaTime_2026-04-28_13.35.31.csv  deltaTime_2026-04-28_13.36.43.csv  deltaTime_2026-04-28_13.42.53.csv  deltaTime_2026-04-28_13.43.58.csv  deltaTime_2026-04-28_13.46.34.csv
